fix: Handle attention extraction failure and None metrics
- decision_points.py: try/except around output_attentions, fallback to
  entropy-only discovery if attention extraction fails (4-bit models, OOM)
- notebook Cell 5: Added fmt() helper to safely format None metrics
- Reduced MAX_EXAMPLES to 3 for faster iteration

--- a/notebooks/EdgePatch_Colab.ipynb
+++ b/notebooks/EdgePatch_Colab.ipynb
@@ -514,7 +514,6 @@
                 "\n",
                 "for prior_path in prior_run_paths:\n",
                 "    if prior_path.exists():\n",
-                "        # Find all_results.json in subdirs\n",
                 "        for results_file in prior_path.glob(\"*/all_results.json\"):\n",
                 "            try:\n",
                 "                with open(results_file) as f:\n",
@@ -524,18 +523,16 @@
                 "            except Exception as e:\n",
                 "                print(f\"Warning: Could not load {results_file}: {e}\")\n",
                 "\n",
-                "# Also check current checkpoint for growing exclude list\n",
                 "if prev_state and 'processed_ids' in prev_state:\n",
                 "    prior_ids.update(prev_state['processed_ids'])\n",
                 "    print(f\"Added {len(prev_state['processed_ids'])} IDs from checkpoint\")\n",
                 "\n",
                 "print(f\"Total IDs to exclude: {len(prior_ids)}\")\n",
-                "print(f\"Incremental sync target: {DRIVE_SYNC}\")\n",
                 "\n",
                 "# ============================================================\n",
                 "# ROLLOUT-LIGHT CONFIGURATION\n",
                 "# ============================================================\n",
-                "MAX_EXAMPLES = 5  # Number of NEW examples to process\n",
+                "MAX_EXAMPLES = 3  # Number of NEW examples to process\n",
                 "MAX_DECISION_POINTS = 3  # Decision points per example\n",
                 "ROLLOUT_K = 4  # Rollouts per (decision_point, chunk) pair\n",
                 "ROLLOUT_H = 64  # Tokens per rollout\n",
@@ -552,21 +549,6 @@
                 "if prev_state and prev_state.get('status') == 'completed':\n",
                 "    print(f\"\\n\u2713 Confirm run already completed at {prev_state.get('timestamp')}\")\n",
                 "    print(f\"  Results at: {prev_state.get('drive_path')}\")\n",
-                "    \n",
-                "    # Load and display metrics\n",
-                "    metrics_path = Path(prev_state.get('drive_path')) / 'eval_metrics.json'\n",
-                "    if metrics_path.exists():\n",
-                "        with open(metrics_path) as f:\n",
-                "            metrics = json.load(f)\n",
-                "        print(\"\\n\" + \"=\"*60)\n",
-                "        print(\"EVALUATION METRICS (from previous run)\")\n",
-                "        print(\"=\"*60)\n",
-                "        for k, v in metrics.items():\n",
-                "            if isinstance(v, float):\n",
-                "                print(f\"{k}: {v:.4f}\")\n",
-                "            else:\n",
-                "                print(f\"{k}: {v}\")\n",
-                "        print(\"=\"*60)\n",
                 "else:\n",
                 "    print(f\"\\nRunning rollout-light confirm (max_examples={MAX_EXAMPLES})...\")\n",
                 "    print(\"Results sync to Drive after EVERY example for crash protection!\")\n",
@@ -578,14 +560,13 @@
                 "        \"--output-dir\", str(LOCAL_OUTPUT),\n",
                 "        \"--max-examples\", str(MAX_EXAMPLES),\n",
                 "        \"--score-span\", \"extended\",\n",
-                "        \"--method\", \"rollout_light\",  # NEW: Use rollout-light v2\n",
+                "        \"--method\", \"rollout_light\",  # Use rollout-light v2\n",
                 "        \"--max-decision-points\", str(MAX_DECISION_POINTS),\n",
                 "        \"--rollout-k\", str(ROLLOUT_K),\n",
                 "        \"--rollout-h\", str(ROLLOUT_H),\n",
-                "        \"--drive-sync-dir\", str(DRIVE_SYNC),  # Incremental sync\n",
+                "        \"--drive-sync-dir\", str(DRIVE_SYNC),\n",
                 "    ]\n",
                 "    \n",
-                "    # Add exclude IDs if we have any\n",
                 "    if prior_ids:\n",
                 "        cmd += [\"--exclude-ids\"] + list(prior_ids)\n",
                 "    \n",
@@ -599,13 +580,18 @@
                 "        results_path = run_dir / \"all_results.json\"\n",
                 "        \n",
                 "        if metrics_path.exists():\n",
-                "            # Final sync to Drive (full artifacts)\n",
                 "            drive_path = sync_to_drive(run_dir, DRIVE_RUNS / RUN_NAME)\n",
                 "            \n",
                 "            with open(metrics_path) as f:\n",
                 "                metrics = json.load(f)\n",
                 "            \n",
-                "            # Collect processed IDs for checkpoint\n",
+                "            # Helper to safely format metrics\n",
+                "            def fmt(val, default='N/A'):\n",
+                "                if val is None:\n",
+                "                    return default\n",
+                "                return f\"{val:.4f}\"\n",
+                "            \n",
+                "            # Collect processed IDs\n",
                 "            processed_ids = list(prior_ids)\n",
                 "            if results_path.exists():\n",
                 "                with open(results_path) as f:\n",
@@ -614,15 +600,17 @@
                 "                        if ex[\"example_id\"] not in prior_ids:\n",
                 "                            processed_ids.append(ex[\"example_id\"])\n",
                 "                    \n",
-                "                    # Check for rollout-light method details\n",
+                "                    # Check for method_details\n",
                 "                    if results_data and 'method_details' in results_data[0]:\n",
                 "                        details = results_data[0]['method_details']\n",
                 "                        print(\"\\n\" + \"=\"*60)\n",
                 "                        print(\"ROLLOUT-LIGHT METHOD DETAILS\")\n",
                 "                        print(\"=\"*60)\n",
-                "                        print(f\"Decision points found: {details['stats'].get('decision_points_found', 'N/A')}\")\n",
-                "                        print(f\"Chunks screened: {details['stats'].get('chunks_screened', 'N/A')}\")\n",
-                "                        print(f\"Rollout sets: {details['stats'].get('rollout_sets', 'N/A')}\")\n",
+                "                        print(f\"Method: {details.get('method', 'N/A')}\")\n",
+                "                        stats = details.get('stats', {})\n",
+                "                        print(f\"Decision points found: {stats.get('decision_points_found', 'N/A')}\")\n",
+                "                        print(f\"Chunks screened: {stats.get('chunks_screened', 'N/A')}\")\n",
+                "                        print(f\"Rollout sets: {stats.get('rollout_sets', 'N/A')}\")\n",
                 "                        print(\"=\"*60)\n",
                 "            \n",
                 "            # Save checkpoint\n",
@@ -637,25 +625,29 @@
                 "            print(\"\\n\" + \"=\"*60)\n",
                 "            print(\"EVALUATION METRICS\")\n",
                 "            print(\"=\"*60)\n",
-                "            print(f\"Spearman \u03c1:     {metrics.get('spearman_rho', 'N/A'):.4f}\")\n",
-                "            print(f\"Top-1 overlap:  {metrics.get('top_1_overlap', 'N/A'):.4f}\")\n",
-                "            print(f\"Top-3 overlap:  {metrics.get('top_3_overlap', 'N/A'):.4f}\")\n",
-                "            print(f\"PR-AUC@10%:     {metrics.get('pr_auc_10', 'N/A'):.4f}\")\n",
-                "            print(f\"Shuffled \u03c1:     {metrics.get('shuffled_rho', 'N/A'):.4f}\")\n",
+                "            print(f\"Examples:       {metrics.get('n_examples', 'N/A')}\")\n",
+                "            print(f\"Spearman \u03c1:     {fmt(metrics.get('spearman_rho'))}\")\n",
+                "            print(f\"Top-1 overlap:  {fmt(metrics.get('top_1_overlap'))}\")\n",
+                "            print(f\"Top-3 overlap:  {fmt(metrics.get('top_3_overlap'))}\")\n",
+                "            print(f\"PR-AUC@10%:     {fmt(metrics.get('pr_auc_10'))}\")\n",
+                "            print(f\"Shuffled \u03c1:     {fmt(metrics.get('shuffled_rho'))}\")\n",
                 "            print(\"=\"*60)\n",
-                "            print(f\"\u2713 CONFIRM PASS - Processed {len(processed_ids) - len(prior_ids)} NEW examples\")\n",
-                "            print(f\"  Method: rollout_light\")\n",
-                "            print(f\"  Drive path: {drive_path}\")\n",
+                "            if metrics.get('n_examples', 0) > 0:\n",
+                "                print(f\"\u2713 CONFIRM PASS - Processed {len(processed_ids) - len(prior_ids)} NEW examples\")\n",
+                "                print(f\"  Method: rollout_light\")\n",
+                "                print(f\"  Drive path: {drive_path}\")\n",
+                "            else:\n",
+                "                print(f\"\u26a0\ufe0f CONFIRM INCOMPLETE - Check logs for errors\")\n",
                 "            print(\"=\"*60)\n",
                 "        else:\n",
                 "            print(\"\\n\" + \"=\"*60)\n",
                 "            print(\"\u2717 CONFIRM FAIL - No eval_metrics.json\")\n",
-                "            print(f\"  Check incremental results at: {DRIVE_SYNC / 'all_results_incremental.json'}\")\n",
+                "            print(f\"  Check: {DRIVE_SYNC / 'all_results_incremental.json'}\")\n",
                 "            print(\"=\"*60)\n",
                 "    else:\n",
                 "        print(\"\\n\" + \"=\"*60)\n",
                 "        print(\"\u2717 CONFIRM FAIL - No run directory\")\n",
-                "        print(f\"  Check incremental results at: {DRIVE_SYNC / 'all_results_incremental.json'}\")\n",
+                "        print(f\"  Check: {DRIVE_SYNC / 'all_results_incremental.json'}\")\n",
                 "        print(\"=\"*60)"
             ]
         },
